src/test/deca/syntax/invalid/personalTests/parser/testCounterParserEssentiel.deca
// Description :
//      test 3 de programmes syntaxiquement incorrects. Cas Essentiel.
// Résultats :
//      erreur de syntaxe.
// Historique :
//      créé le 20/12/2023

class A extends B
int y = 42
